prometheus/prometheus/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-dashboard-route
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  # 这里设置你的域名
    - match: Host(`prometheus.li.com`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
  tls:
    secretName: https
